--- a/css/main.css
+++ b/css/main.css
@@ -2390,10 +2390,10 @@ h1, h2, h3, h4, h5, h6 {
   height:100%;
   width:100%;
   background:#000;
-  opacity:0.4;
+  opacity:0.0;
 }
 .slider{
-  height:680px;
+  height:100%;
   background-size:cover;
   background-position:center;
 }
